# bint

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  bin2int.c  bin2inti.c  bint.c  bint.h  configure.ac  getstrings.c  getstrings.h  illm.h  illm2bin.c  int2bin.c  libin2inti.c  makebindist.sh
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
tests/: Makefile.am  makereport.awk  maketable.awk  test_bin2int-1.sh  test_bin2int-2.sh  test_bin2int-3.sh  test_bin2int-4.sh  test_bin2int-5.sh  test_illm2bin-1.sh  test_illm2bin-2.sh  test_int2bin-1.sh  test_int2bin-2.sh  test_int2bin-3.sh  test_int2bin-4.sh  test_int2bin.sh
